# aegis

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  ampchat.md  architecture_mapping.md  test_health.py
backend/: .gcloudignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.swarm  README.md  WINDOWS_SETUP.md  agents-cli-manifest.yaml  deploy-v1.sh  pyproject.toml  simulator_rules.demo.json  simulator_rules.json  spike_bm25.py  spike_mcp.py  spike_mcp_latency.py  test_adk.py  test_adk_2.py  test_mcp_standalone.py
backend/app/: agent.py  fast_api_app.py  gemini_retry.py  main_swarm.py  main_v1.py
backend/app/aegis_swarm/: agent.py  appeal_api.py  client.py  corpus_store.py  literature_discovery.py  prompt_override_client.py  schemas.py  swarm_config.py  swarm_orchestrator.py  (+5 more)
backend/baseline_day_zero/: MANIFEST.json  README.md  active_drafter_prompt.txt  active_question_agent_prompt.txt
backend/corpus/: README.md  cigna_medical_necessity.md  discovery_audit.jsonl  erisa_503.md  provenance.json
backend/scripts/: commit_manual_batches.sh  demo_remeasure_holdout.py  generate_cases_221_420.py  generate_cases_421_500.py  generate_cursor_verbose_pass.py  generate_library_spot_checks.py  generate_single_case.py  guinea_pig_common.py  gumloop_manual_sample_01_10.py  ingest_library_seed.py  naturalize_flaws_in_drafts.py  old_run_manual_case_batch.py  prune_phoenix_traces.py  pull_showcase_ledger.py  record_phoenix_fixtures.py  remeasure_lift_cases.py  rescore_lift_simulator.py  reset_to_day_zero.py  run_guinea_pig_drafter_rerun.py  run_guinea_pig_gepa.py  run_guinea_pig_measure.py  run_gumloop_offline_pass.py  run_gumloop_prompt_pass_batches_11_500.py  run_llm_gumloop_batch_01_10.py  run_manual_case_batch.py  run_swarm_counterfactual_offline.py  run_swarm_learning_offline.py  run_true_gumloop_all_500.py  seed_phoenix_default.py  smoke_prod_appeal.py  smoke_prod_phase3_judges.py  smoke_prod_phase3_seed.py  smoke_prod_showcase_approve.py  smoke_prod_showcase_evaluate.py  smoke_prod_showcase_quick.py  smoke_track_b.py  sync_frontend_test_fixtures.py  upgrade_benchmark_aplus.py  upgrade_calibration_aplus.py  upgrade_cases_01_220_web.py  (+2 more)
backend/tests/: conftest.py  learning_constants.py
(+2981 files in other folders)
