[project]
name = "aegis-backend"
version = "0.1.0"
description = "Aegis health-insurance appeal letter agent"
dependencies = [
    "google-adk>=2.2.0",
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "openinference-instrumentation-google-adk>=0.1.15",
    "arize-phoenix-otel>=0.16.1",
    "arize-phoenix-client>=2.6.0",
    "rank-bm25>=0.2.2",
    "jsonschema>=4.26.0",
    "mcp>=1.27.2",
    "httpx2>=2.3.0",
    "opentelemetry-exporter-gcp-logging>=1.12.0a0",
    "pandas>=2.2.0",
]
requires-python = ">=3.11,<3.14"


[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.4.0",
    "nest-asyncio>=1.6.0",
]

[project.optional-dependencies]
eval = [
    "google-adk[eval]>=2.2.0",
]
lint = [
    "ruff>=0.4.6",
    "ty>=0.0.1a0",
    "codespell>=2.2.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP", # pyupgrade
    "RUF", # ruff specific rules
]
ignore = ["E501", "C901", "B006"] # ignore line too long, too complex

[tool.ruff.lint.isort]
known-first-party = ["app", "frontend"]

[tool.ty]
# ty is Astral's Rust-based type checker (same team as ruff/uv)
# See: https://docs.astral.sh/ty/

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
exclude = [".venv/**"]

[tool.ty.rules]
# Ignore common issues with third-party libraries and dynamic code patterns
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-return-type = "ignore"
possibly-missing-attribute = "ignore"
not-subscriptable = "ignore"
deprecated = "ignore"

[tool.codespell]
ignore-words-list = "rouge"
skip = "./locust_env/*,uv.lock,.venv,./frontend,**/package-lock.json"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"
addopts = "--ignore=test_mcp_standalone.py"

[tool.hatch.build.targets.wheel]
packages = ["app"]


